Alignment Fix Section

--- a/AspnetIdentityRoleBasedTutorial/wwwroot/css/site.css
+++ b/AspnetIdentityRoleBasedTutorial/wwwroot/css/site.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 /*New Added CSS*/
@@ -70,7 +70,7 @@ html {
 body {
     margin: 0;
     overflow-x: hidden;
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'fantasy';
 }
 
 /* Thin Scrollbar */
@@ -1428,4 +1428,86 @@ span.psw {
         text-decoration: none;
         color: gray;
     }
+
+
+
+/*Section Alignment CSS*/
+
+.product-item img {
+    width: 181px;
+    height: 107px;
+}
+
+
+.section3-header .previous, .section4-header .previous {
+    position: absolute;
+    left: -50px;
+    top: 24vh;
+    z-index: 1;
+}
+
+.section3-header .next, .section4-header .next {
+    position: absolute;
+    right: -50px;
+    top: 24vh;
+    z-index: 1;
+}
+
+
+
+.section4 {
+    width: 100%;
+    min-height: 43vh;
+    overflow-y: hidden;
+    padding: 56px 0px;
+    box-shadow: 0px 6px 16px -6px rgba(1,1,1,0.5);
+    overflow-x: hidden;
+    position: relative;
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    scrollbar-width: none;
+    scroll-behavior: smooth;
+}
+
+
+.quantity-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.quantity-button {
+    width: 30px;
+    height: 30px;
+    font-size: 16px;
+    line-height: 30px;
+    text-align: center;
+    cursor: pointer;
+    background-color: #ccc;
+    border: none;
+    outline: none;
+}
+
+.quantity-input {
+    width: 50px;
+    height: 30px;
+    text-align: center;
+    border: 1px solid #ccc;
+}
+
+.active {
+    color: crimson;
+}
+
+.fa-heart-o {
+    color: red;
+    cursor: pointer;
+}
+
+.fa-heart {
+    color: red;
+    cursor: pointer;
+}
+/*Section Alignment CSS*/
 
